--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,14 @@
 spring.datasource.url=jdbc:oracle:thin:@//192.168.56.101:1521/orcl
 spring.datasource.username=mausamy
 spring.datasource.password=mausamy
+spring.datasource.tomcat.max-active=10
+spring.datasource.tomcat.initial-size=5
+spring.datasource.tomcat.max-idle=5
+spring.datasource.tomcat.min-idle=1
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.testOnBorrow=true
-spring.datasource.tomcat.validationQuery=SELECT 1
+spring.datasource.tomcat.validationQuery=select 1 from dual
+s
 
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.hibernate.ddl-auto=update
